--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,10 +19,10 @@
       <td><%= user.created_at.to_date %></td>
       <td><%= user.roles.first.name.titleize unless user.roles.first.nil? %></td>
       <td>
-        <a data-toggle="modal" href="#role-options-<%= user.id %>" class="btn btn-mini" type="button">Change role</a>
+        <a data-toggle="modal" href="#role-options-<%= user.id %>" class="btn btn-xs" type="button">Change role</a>
         <%= render user %>
       </td>
-      <td><%= link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-mini') unless user == current_user %></td>
+      <td><%= link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-xs') unless user == current_user %></td>
     </tr>
   <% end %>
   </tbody>
