--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
 <% end %>
 <h2>Sign up</h2>
-<div id="stripe_error" class="alert alert-error" style="display:none" >
+<div id="stripe_error" class="alert alert-error" style="display:none;" >
 </div>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'card_form form-vertical' }) do |f| %>
   <h3><%= params[:plan].titleize if params[:plan] %> Subscription Plan</h3>
