--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -8,8 +8,8 @@
       <%= f.input :role_ids, :collection => Role.all, :as => :radio_buttons, :label_method => lambda {|t| t.name.titleize}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first %>
     </div>
     <div class="modal-footer">
-      <%= f.submit "Change Role", :class => "btn" %>
-      <a class="btn" data-dismiss="modal" href="#">Close</a>
+      <%= f.submit "Change Role", :class => "btn btn-default" %>
+      <a class="btn btn-default" data-dismiss="modal" href="#">Close</a>
     </div>
   <% end %>
 </div>
