--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -7,7 +7,8 @@
   <%- end -%>
   </div>
 
-  <div class="form-actions">
+  <!-- div class="form-actions" --> <!-- .form-actions was removed from Boostrap3 -->
+  <div class="createyourclass">
     <%%= f.button :submit %>
   </div>
 <%% end %>
