--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,6 @@
 <%# navigation styled for Bootstrap 3.0 %>
 <ul class="navbar narbar-default">
-  <strong>
-    <%= link_to "Rails Stripe Membership Saas", root_path %> &nbsp;
-  </strong>
+  <%= link_to "Rails Stripe Membership Saas", root_path, :class => 'brand' %> &nbsp;
   <% if user_signed_in? %> <b>&#124;</b>
     <% if current_user.has_role? :platinum %><%= link_to "Hello " + "#{current_user.name}", content_platinum_path %> <b>&#124;</b>
     <% elsif current_user.has_role? :gold %><%= link_to "Hello " + "#{current_user.name}", content_gold_path %> <b>&#124;</b>
