--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,19 +1,21 @@
 <div id="role-options-<%= user.id %>" class="modal" style="display: none;">
   <div class="modal-dialog">
     <div class="modal-content">
-      <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
-        <div class="modal-header">
-          <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>Change User's Role</h3>
-        </div> <!-- close .modal-header -->
-        <div class="modal-body">
-          <%= f.input :role_ids, :collection => Role.all, :as => :radio_buttons, :label_method => lambda {|t| t.name}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first %>
-        </div> <!-- close .modal-body -->
-        <div class="modal-footer">
-          <%= f.submit "Change Role", :class => "btn btn-primary" %>
-          <button type="button" class="btn btn-default" data-dismiss="modal" href="#">No Role Change</button>
-        </div> <!-- close .modal-footer -->
-      <% end %>
+      <div class="usermodal" role="form" aria-label="usermodal">
+        <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
+          <div class="modal-header">
+            <button type="button" class="close btn btn-default" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h3>Change User's Role</h3>
+          </div> <!-- close .modal-header -->
+          <div class="modal-body">
+            <%= f.input :role_ids, :collection => Role.all, :as => :radio_buttons, :label_method => lambda {|t| t.name}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first %>
+          </div> <!-- close .modal-body -->
+          <div class="modal-footer">
+            <%= f.submit "Change Role", :class => "btn btn-primary" %>
+            <button type="button" class="btn btn-default" data-dismiss="modal" href="#">No Role Change</button>
+          </div> <!-- close .modal-footer -->
+        <% end %>
+      </div><!-- close .usermoda -->
     </div><!-- close .modal-content -->
   </div><!-- close .modal-dialog -->
 </div><!-- close #role-options -->
