--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <div id="role-options-<%= user.id %>" class="modal" style="display: none;">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" role="form" aria-label="formcontent">
       <div class="usermodal" role="form" aria-label="usermodal">
         <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
           <div class="modal-header">
@@ -15,7 +15,7 @@
             <button type="button" class="btn btn-default" data-dismiss="modal" href="#">No Role Change</button>
           </div> <!-- close .modal-footer -->
         <% end %>
-      </div><!-- close .usermoda -->
+      </div><!-- close .usermodal -->
     </div><!-- close .modal-content -->
   </div><!-- close .modal-dialog -->
 </div><!-- close #role-options -->
