stripe_card tests passing

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY %>
+  <%= tag :meta, :name => "stripe-key", :content => STRIPE_PUBLISHABLE_KEY %>
 <% end %>
 <h2>Account</h2>
 <div id="stripe_error" class="alert alert-error" style="display:none;"></div>
